# Consenrich

./: .gitignore  Examples.md  HTSCODECS_LICENSE.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  setup.py
.github/workflows/: Documentation.yml  LongTests.yaml  Tests.yml  wheels.yml
consenrich/: consenrich.py  misc_util.py
consenrich/refdata/: ce11_sparse.bed  dm6_sparse.bed  mm10_sparse.bed  mm39_sparse.bed
docs/: consenrichEnv.yaml  consensus_peaks.md  experimentTemplate.yaml  matchingEnrichmentAnalysis.R  references.bib
docs/source/: conf.py  examples.rst  index.rst  installation.rst  modules.rst  params.rst
src/consenrich/: __init__.py  _logging.py  _normalization.py  _runtime.py  cache_cli.py  cconsenrich.c  cconsenrich.html  cconsenrich.pyx  ccounts.c  ccounts.pyx  config.py  consenrich.py  constants.py  core.py  cuncertainty.c  cuncertainty.pyx  detrorm.py  diagnostics.py  genome_covariate_builder.py  genome_covariates.py  io.py  matching.py  matching_legacy.py  mergeNarrowPeaks.py  misc_util.py  munc.py  peaks.py  regions.py  segshrink.py  shrinkState.py  state_space.py  uncertainty.py
src/consenrich/data/: __init__.py  ce10_sparse.bed  dm6_sparse.bed
src/consenrich/matching/: __init__.py  adapters.py  init.py  matching_alg.py
src/consenrich/native/: __init__.py  ccounts_backend.c  ccounts_backend.h
tests/: atacTest.yml  config_no_input.yaml  conftest.py  pytest.ini  smallTest.bam.bai  smallTest2.bam  smallTest2.bam.bai  test_config.py  test_consenrich.py  test_core.py  test_genome_covariate_builder.py  test_genome_covariates.py  test_matching_api.py  test_matching_functionality.py  test_merge_matches_small.py  test_no_global_logging.py  test_public_api.py  test_ref_match.bb  test_ref_match.bed  test_region_file.bb  test_rocco.py  test_sample_one.bam.bai  test_sample_three.bam.bai  test_sample_two.bam.bai  test_uncertainty.py  unmerged.test.narrowPeak
tests/data/fragments/: allow_BC_A.txt  barcode_groups.tsv  small.fragments.tsv  small.fragments.tsv.gz.tbi
