[build-system]
requires = [
    "setuptools>=74.1",
    "wheel",
    "cython>=3.0",
    "numpy>=2.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "consenrich"
version = "0.10.2a0"
description = "Genome-wide estimation of signals hidden in noisy multi-sample HTS datasets"
authors = [{ name="Nolan H. Hamilton", email="nolan.hamilton@unc.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "cython>=3.0",
    "numpy>=2.1",
    "scipy>=1.15",
    "pandas>=2.3.0",
    "pybedtools>=0.11.2",
    "PyYAML>=6.0.2",
    "PyWavelets>=1.9.0",
    "tqdm",
    "itrigamma>=0.1.0a",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "build", "twine"]
docs = [
    "sphinx>=7.3",
    "sphinx-press-theme",
    "furo",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.1",
    "sphinx-autobuild>=2025.2",
    "sphinx-copybutton>=0.5.0",
    "sphinxcontrib-bibtex>=2.4.0",
]
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = [
    "LICENSE",
    "THIRD_PARTY_LICENSES.md",
    "HTSLIB_LICENSE.txt",
    "HTSCODECS_LICENSE.md",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
include = ["consenrich", "consenrich.*"]

[tool.setuptools.package-data]
consenrich = ["native/*"]
"consenrich.data" = ["*.bed", "*.sizes"]

[project.scripts]
consenrich = "consenrich.consenrich:main"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
test-requires = ["pytest"]
test-command = 'sh -c "cd {project}/tests && HOME=/tmp pytest -q test_config.py test_core.py"'
